Deleted Unwanted Photos

--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 <div class="login-box">
-<h2 style="border-bottom: 2px solid #4caf50;">Enter your details here</h2>
+<h2 style="border-bottom: 2px solid #4caf50;">Enter your details </h2>
 <form>
 	<div class="textbox">
 		<table >
