Added Calender input ie exam date in form.html

--- a/form.html
+++ b/form.html
@@ -16,14 +16,27 @@
 <form>
 	<div class="textbox">
 		<table >
-				<tr>
-					<td>
-						<strong><h4>Days left for exam:</h4></strong>
-					</td>
-					<td>
-						<input type="text" placeholder="Enter no. of days" name="" id="nod">
-					</td>
-				</tr>
+			<tr>
+				<td>
+					<strong><h4>Exam Date:</h4></strong>
+				</td>
+				<td>
+					<input type="date" name="exam_date" id="exam_date">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<strong><h4>Or</h4></strong>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<strong><h4>Days left for exam:</h4></strong>
+				</td>
+				<td>
+					<input type="number" placeholder="Enter no. of days" name="no_of_days" id="no_of_days">
+				</td>
+			</tr>
 		</table>
 	</div>
 	<div class="textbox">
