--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
 			</tr>
 			<tr>
 				<td>
-					<strong><h4>Or</h4></strong>
+					<strong><h4 style="text-align: right;">Or</h4></strong>
 				</td>
 			</tr>
 			<tr>
@@ -42,8 +42,8 @@
 	<div class="textbox">
 	<table>		
 		<tr>
-			<td style="border-bottom: 3px solid #4caf50; width: 90%;">
-				<strong><h3>Subject Priorities:</h3></strong>
+			<td style="border-bottom: 2px solid #4caf50;">
+				<h3>Subject Priorities:</h3>
 			</td>
 		</tr>
 		<tr>
