--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 		</div>
 	</form>
 		<br><a href="form.html"><button onclick="getIndexVars()" class="btn" id="btnb">Submit</button></a>
-
-	
-
+		<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+		<script src="https://mediafiles.botpress.cloud/897595c2-4a68-4c74-8d68-bdd14d6a330e/webchat/config.js" defer></script>
 
 <script type="text/javascript" src="scripts/index.js"></script>
 </body>
