--- a/form.html
+++ b/form.html
@@ -143,6 +143,8 @@
 <script type="text/javascript" src="scripts/form.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/897595c2-4a68-4c74-8d68-bdd14d6a330e/webchat/config.js" defer></script>
 
 </body>
 </html>
