Added Final Changes

--- a/form.html
+++ b/form.html
@@ -6,11 +6,38 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-<div class="introlines">
-    <div align="">
-        <h1 align="center">STUDY COMRADE</h1>
-    </div>
-</div>
+	<header class="header" id="header">
+		<nav class="nav container">
+		<h2 href="#" class="nav__logo">STUDY COMRADE</h2>
+
+		<div class="nav__menu" id="nav-menu">
+			<ul class="nav__list">
+				<li class="nav__item">
+					<a href="home.html" class="nav__link">Home</a>
+				</li>
+
+				<li class="nav__item">
+					<a href="about.html" class="nav__link">About Us</a>
+				</li>
+
+				<li class="nav__item">
+					<a href="index.html" class="nav__link">Schedule</a>
+				</li>
+
+				</li>
+
+				<li class="nav__item">
+					<a href="contact.html" class="nav__link">Contact Us</a>
+				</li>
+			</ul>
+
+			
+		</div>
+
+		
+		</nav>
+	</header>
+
 <div class="login-box">
 <h2 style="border-bottom: 2px solid #4caf50;">Enter your details </h2>
 <form>
@@ -43,7 +70,7 @@
 	<table>		
 		<tr>
 			<td style="border-bottom: 2px solid #4caf50;">
-				<h3>Subject Priorities:</h3>
+				<h3><br>Subject Priorities: <br></h3>
 			</td>
 		</tr>
 		<tr>
