--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="home.html" class="nav__link">Home</a>
+                    <a href="index.html" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
                     <a href="about.html" class="nav__link">About Us</a>
                 </li>
                 <li class="nav__item">
-                    <a href="index.html" class="nav__link">Schedule</a>
+                    <a href="home.html" class="nav__link">Schedule</a>
                 </li>
                 <li class="nav__item">
                     <a href="contact.html" class="nav__link">Contact Us</a>
