--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 		<div class="nav__menu" id="nav-menu">
 			<ul class="nav__list">
 				<li class="nav__item">
-					<a href="home.html" class="nav__link">Home</a>
+					<a href="index.html" class="nav__link">Home</a>
 				</li>
 
 				<li class="nav__item">
@@ -21,7 +21,7 @@
 				</li>
 
 				<li class="nav__item">
-					<a href="index.html" class="nav__link">Schedule</a>
+					<a href="home.html" class="nav__link">Schedule</a>
 				</li>
 
 				</li>
