--- a/home.html
+++ b/home.html
@@ -53,8 +53,7 @@
 					</td>
 					<td>
 						<select id="year" required>
-							<option value="" disabled selected>Select Year</option>
-							<option value="1">1st Year</option>
+							<option value="1" selected>1st Year</option>
 							<option value="2">2nd Year</option>
 							<option value="3">3rd Year</option>
 							<option value="4">4th Year</option>
@@ -71,8 +70,7 @@
 					</td>
 					<td>
 						<select id="sem" required>
-							<option value="" disabled selected>Select Semester</option>
-							<option value="1">1st Semester</option>
+							<option value="1" selected>1st Semester</option>
 							<option value="2">2nd Semester</option>
 						</select>
 					</td>
