--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             <ul>
                 <li>Provide Study Schedule</li>
                 <li>Provide a chat bot to answer your Queries</li>
-                <li>Provide materal through chat bot</li>
+                <li>Provide material through chat bot</li>
             </ul>
             <h3>Our Values</h3>
             <p>Our work at Study Comrade is guided by the following core values:</p>
