--- a/index.html
+++ b/index.html
@@ -58,5 +58,7 @@
         </section>
      <!--=============== MAIN JS ===============-->
      <script src="scripts/index.js"></script>
+     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/897595c2-4a68-4c74-8d68-bdd14d6a330e/webchat/config.js" defer></script>
     </body>
 </html>
